<resources>
    <string name="app_name">Safety and Hygiene</string>
    <string name="main_app_name">Safety &amp; Hygiene</string>
    <string name="title_settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_btn">Log Out</string>
    <string name="music">Music</string>
    <string name="music_on">ON</string>
    <string name="music_off">OFF</string>
    <string name="language">Language</string>
    <string name="sign_out_successfully">Sign Out Successfully</string>
    <string name="sure_to_log_out">Are you sure want to Log Out ?</string>
    <string name="setting_yes">Yes</string>
    <string name="setting_no">No</string>
    <string name="select_language">Select a Language</string>
    <string name="setting_ok">OK</string>
    <string name="setting_loading">Loading...</string>
    <string name="welcome">Welcome</string>
    <string name="main_login_register_btn">LOGIN/REGISTER</string>
    <string name="main_start">Start</string>
    <string name="main_for_your_info">This application is to educate children 3 - 12 years old about safety and hygiene precautions.
        \n\nYou should connect internet service when using this application
        \n\nBackground Resource: From pngtree.com</string>
    <string name="main_ok">OK</string>
    <string name="main_start_without_log_in">No Log In</string>
    <string name="main_alert_no_log_in">If you do not have an account, you can still using this app.
        \n\nHowever, the result will not be stored.
        \n\nDo you want to continue?</string>
    <string name="main_cancel">Cancel</string>
    <string name="main_confirm_exit">Confirm Exit?</string>
    <string name="main_confirm_exit_message">Are you sure to exit this app?</string>
    <string name="main_alert_internet">Reminder</string>
    <string name="main_alert_internet_message">Please confirm you have connect with internet before using this app\n\nIf not some service will cannot be used when disconnected from internet.</string>
    <string name="login">Login</string>
    <string name="login_welcome">Welcome</string>
    <string name="signin_continue">SignIn to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login_login">Log In</string>
    <string name="new_user">New User? Sign Up</string>
    <string name="register">Register</string>
    <string name="signup_new_user">SignUp to start as new user</string>
    <string name="register_signup">Sign Up</string>
    <string name="have_account">Already have an Account? Log In</string>
    <string name="login_please_wait">Please Wait...</string>
    <string name="loginngin">Logging in...</string>
    <string name="empty_field">Field cannot be empty</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="login_reset_password">Reset Password</string>
    <string name="successfully_reset">Email  sent successfully to reset yur password!</string>
    <string name="login_cancel">Cancel</string>
    <string name="password_set_error">Password cannot contain space and less than 6 characters</string>
    <string name="register_success">Success</string>
    <string name="register_failed">Authentication failed</string>
    <string name="second_page_video">Video</string>
    <string name="second_page_information">Information</string>
    <string name="second_page_game">Game</string>
    <string name="second_page_quiz">Quiz</string>
    <string name="second_page_statistic">Statistics</string>
    <string name="video_title">Video</string>
    <string name="video_hygiene">Hygiene Video</string>
    <string name="video_road">Road Safety Video</string>
    <string name="video_home">Home Safety Video</string>
    <string name="video_reminder">Reminder</string>
    <string name="video_reminder_message">Kindly turn off the background music in Settings page to avoid disturbing when playing video</string>
    <string name="video_go_setting">Go Settings</string>
    <string name="video_cancel">Cancel</string>
    <string name="information_title">Information</string>
    <string name="infomation_sop">Covid-19 SOP</string>
    <string name="information_covid_statistics">COVID STATISTICS</string>
    <string name="information_safety_statistics">Safety STATISTICS</string>
    <string name="information_dictionary">Dictionary</string>
    <string name="dictionary_title">Dictionary</string>
    <string name="name_dictionary">Name</string>
    <string name="dictionary_traffic_light">Traffic Light</string>
    <string name="dictionary_caution_sign">Caution Sign</string>
    <string name="dictionary_speed">Speed 30km/h</string>
    <string name="dictionary_no_entry">No entry</string>
    <string name="dictionary_turn_left">Turn Left</string>
    <string name="dictionary_turn_right">Turn Right</string>
    <string name="dictionary_medical_mask">Medical Mask</string>
    <string name="dictionary_test_kit">Test Kit</string>
    <string name="dictionary_sanitizer">Sanitizer</string>
    <string name="quiz_title">Quiz</string>
    <string name="quiz_instruction">Instruction</string>
    <string name="quiz_hygiene">Hygiene Quiz</string>
    <string name="quiz_road">Road Safety Quiz</string>
    <string name="quiz_home">Home Safety Quiz</string>
    <string name="quiz_next">Next</string>
    <string name="quiz_score">Score:</string>
    <string name="quiz_result">Result</string>
    <string name="quiz_result_all">All result</string>
    <string name="quiz_result_hygiene">Hygiene Quiz Result</string>
    <string name="quiz_result_road">Road Safety Quiz Result</string>
    <string name="quiz_result_home">Home Safety Quiz Result</string>
    <string name="quiz_correct_result">Correct: </string>
    <string name="quiz_wrong_result">Wrong: </string>
    <string name="quiz_score_result">Score: </string>
    <string name="quiz_popup_restart">Restart</string>
    <string name="quiz_popup_ok">OK</string>
    <string name="quiz_skip">Skip</string>
    <string name="quiz_correct">Correct</string>
    <string name="quiz_wrong">Wrong</string>
    <string name="quiz_hints">Hints</string>
    <string name="quiz_ok">OK</string>
    <string name="hygiene_quiz_question_1">We should not put fingers in mouth or bite our nails.</string>
    <string name="hygiene_quiz_question_2">You should use soap and water to wash your hands.</string>
    <string name="hygiene_quiz_question_3">After playing, you should always wash your hands with hot wate.r</string>
    <string name="hygiene_quiz_question_4">Before washing hand, you should wet your hand first.</string>
    <string name="hygiene_quiz_question_5">You don’t have to dry your hands after washing.</string>
    <string name="hygiene_quiz_question_6">Washing your hand properly before eating.</string>
    <string name="hygiene_quiz_question_7">During pandemic, when you go out, you should wear mask.</string>
    <string name="hygiene_quiz_question_8">Cover your mouth when sneezing and coughing.</string>
    <string name="hygiene_quiz_question_9">We should not take bath every day.</string>
    <string name="hygiene_quiz_question_10">We should brush our teeth at least twice a day.</string>
    <string name="hygiene_quiz_answer_true">TRUE</string>
    <string name="hygiene_quiz_answer_false">FALSE</string>
    <string name="hygiene_quiz_hints_1">Fingernails will store dirty.</string>
    <string name="hygiene_quiz_hints_2">Soap can kill bacteria.</string>
    <string name="hygiene_quiz_hints_3">Hot water will hurt your hand.</string>
    <string name="hygiene_quiz_hints_4">Wet the hands can have better cleaning.</string>
    <string name="hygiene_quiz_hints_5">It would be best if you dry your hands after wash hands.</string>
    <string name="hygiene_quiz_hints_6">If not, the bacteria and dirty will be eaten and go into the stomach.</string>
    <string name="hygiene_quiz_hints_7">Mask can avoid bacteria and viruses.</string>
    <string name="hygiene_quiz_hints_8">To avoid other people being infected.</string>
    <string name="hygiene_quiz_hints_9">Taking a bath every day can make us keep clean.</string>
    <string name="hygiene_quiz_hints_10">Brush teeth are very important. We should brush at least two times a day.</string>
    <string name="road_quiz_question_1">When travelling in a car, what should you wear?</string>
    <string name="road_quiz_question_2">When you want to cross a road, what should you do?</string>
    <string name="road_quiz_question_3">When crossing at the traffic lights, what light should you wait for?</string>
    <string name="road_quiz_question_4">Which of these are safe ways to cross the road?</string>
    <string name="road_quiz_question_5">When is it safe to cross at a zebra crossing?</string>
    <string name="road_quiz_question_6">What must you do while crossing the road?</string>
    <string name="road_quiz_question_7">Where should you not play?</string>
    <string name="road_quiz_question_8">What does a red light in a traffic light mean?</string>
    <string name="road_quiz_question_9">We should not play when ________</string>
    <string name="road_quiz_question_10">When the green traffic light is blinking, what should you do?</string>
    <string name="road_quiz_answer_1">seat belt</string>
    <string name="road_quiz_answer_2">stop,look,listen</string>
    <string name="road_quiz_answer_3">green light</string>
    <string name="road_quiz_answer_4">zebra crossing</string>
    <string name="road_quiz_answer_5">When traffic on both sides has stopped</string>
    <string name="road_quiz_answer_6">Looking and listening before crossing</string>
    <string name="road_quiz_answer_7">Beside the road</string>
    <string name="road_quiz_answer_8">Do not cross the road</string>
    <string name="road_quiz_answer_9">All the above</string>
    <string name="road_quiz_answer_10">Stop and waiting for next green light</string>
    <string name="road_quiz_option_1a">hat</string>
    <string name="road_quiz_option_1b">watch</string>
    <string name="road_quiz_option_1c">helmet</string>
    <string name="road_quiz_option_2a">stop,talk,run</string>
    <string name="road_quiz_option_2b">look,run,talk</string>
    <string name="road_quiz_option_2c">stop,run,jump</string>
    <string name="road_quiz_option_3a">yellow light</string>
    <string name="road_quiz_option_3b">red light</string>
    <string name="road_quiz_option_3c">no light</string>
    <string name="road_quiz_option_4a">on a bend</string>
    <string name="road_quiz_option_4b">running</string>
    <string name="road_quiz_option_4c">gap between car</string>
    <string name="road_quiz_option_5a">The traffic on one side has stopped</string>
    <string name="road_quiz_option_5b">Any time it is always safe just to cross the road</string>
    <string name="game_avoid_the_virus">Avoid the Virus!</string>
    <string name="game2_sanitizer_mark">30 point</string>
    <string name="game2_mask_mark">10 point</string>
    <string name="game2_virus">Game Over</string>
    <string name="game2_start">START</string>
    <string name="game2_howtoplay">How to play?</string>
    <string name="game2_name">Avoid the Virus!</string>
    <string name="ig21">There are people, masks, sanitizers, and viruses in this game.</string>
    <string name="ig22">The people will move upward when you touch or click the screen.</string>
    <string name="ig23">The people will drop down when you do not touch or click the screen.</string>
    <string name="ig24">The mask, sanitizer, and virus will come from the left side to the right side.</string>
    <string name="ig25">Try to touch the screen to move the people, and let the people touch with masks and sanitizers to get the points.</string>
    <string name="ig26">When the people touch the virus, the game will be ended. So try to avoid the virus and get a higher score in this game!</string>
</resources>