<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/welcome">

    <!--https://pngtree.com/freebackground/children-s-photo-album-baby-album-cover-background-material_1086309.html -->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:theme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/login"
        app:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logoround"
        android:transitionName="logo_image"
        android:layout_gravity="center"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/baloo"
        android:text="@string/login_welcome"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_gravity="center"/>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_continue"
        android:textSize="18sp"
        android:fontFamily="@font/reggae_one"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/login_email">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/text_shape"
                android:baselineAligned="false"
                android:padding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/text_shape"
                android:baselineAligned="false"
                android:padding="10dp"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


    <Button
        android:id="@+id/forgetpasswordbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/forget_password"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:elevation="0dp"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/backgroupshape"
        android:text="@string/login_login"
        android:layout_marginRight="45dp"
        android:layout_marginLeft="45dp"
        android:textColor="#221D1D" />

    <Button
        android:id="@+id/newuserbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/new_user"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:elevation="0dp"
        android:layout_margin="5dp"/>

    </LinearLayout>
</LinearLayout>