<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundblackshape">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/amaranth"
        android:text="@string/game2_howtoplay"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="@font/amaranth"
        android:text="@string/game2_name"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ig21" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/delius_swash_caps"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/ig21"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ig22" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/delius_swash_caps"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/ig22"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ig23" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/delius_swash_caps"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/ig23"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ig24" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/delius_swash_caps"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/ig24"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ig25" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/delius_swash_caps"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/ig25"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ig26" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/delius_swash_caps"
                android:gravity="left"
                android:justificationMode="inter_word"
                android:text="@string/ig26"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/closedialog2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/backgroundblackshape"
                android:text="close" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>